--- a/configs/snakemake/local/config.yaml
+++ b/configs/snakemake/local/config.yaml
@@ -1,7 +1,8 @@
-# cores: # is overruled by Snakemake config file
-#   10
 jobs:
   3
+cores: # is overruled by Snakemake config file
+  2
+
 
 use-conda:
   True
@@ -10,10 +11,12 @@ conda-frontend:
 conda-prefix: # avoid duplication of envs but it's impossible to simultaneously fetch 2 envs from 2 different snakemake projects
   "~/VSC5_data/snakemake_envs/conda" 
 
+
 use-singularity:
   True
 singularity-prefix:
   "~/VSC5_data/snakemake_envs/singularity"
+
 
 printshellcmds: 
   True
