--- a/configs/FunLuca_config.yaml
+++ b/configs/FunLuca_config.yaml
@@ -1,10 +1,15 @@
 #! global params
 nCORE:
   250 # cores used per single job
+
+
+#! database:
 GTDBTk_dir:
   "databases/GTDBTk"
 GTDBTk_db:
   "databases/GTDBTk/GTDBTk_token"
+TCDB_dir:
+  "databases/tcdb"
 
 
 #! modules to run:
