--- a/configs/FunLuca_config.yaml
+++ b/configs/FunLuca_config.yaml
@@ -7,7 +7,7 @@ nCORE:
 GTDBTk_dir:
   "databases/GTDBTk"
 GTDBTk_db:
-  "databases/GTDBTk/GTDBTk.token"
+  "databases/GTDBTk/GTDBTk_token"
 TCDB_dir:
   "databases/tcdb"
 
