--- a/configs/snakemake/local/config.yaml
+++ b/configs/snakemake/local/config.yaml
@@ -15,7 +15,7 @@ conda-prefix: # avoid duplication of envs but it's impossible to simultaneously 
 use-singularity:
   True
 singularity-prefix:
-  "databases/singularity"
+  "tools/singularity"
 
 
 printshellcmds: 
