--- a/configs/FunLuca_config.yaml
+++ b/configs/FunLuca_config.yaml
@@ -5,7 +5,7 @@ nCORE:
 
 #! database:
 GTDBTk_path:
-  ann_dbs_path+"/GTDBTk"
+  "GTDBTk"
 
 
 #! modules to run:
@@ -30,13 +30,13 @@ ann_modules:
 
 ##! kofamscan
 kegg_db:
-  ann_dbs_path+"/KEGG/kofamscan"
+  "KEGG/kofamscan"
 KM_str:
   "databases/KM_str.rds"
 
 ##! antismash
 antim_db:
-  ann_dbs_path+"/antismash_token"
+  "antismash_token"
 
 ##! gblast (BioVx)
 transp_set: # transporter set retained: all - B1_B12_B3_B7_SIDERO - WITH_SUBSTRATE - NO_GENERIC 
@@ -44,21 +44,21 @@ transp_set: # transporter set retained: all - B1_B12_B3_B7_SIDERO - WITH_SUBSTRA
 
 ##! blast-phytohormones
 phytohormones_db:
-  ann_dbs_path+"/custom_fasta/Protein_sequences_for_phytohormone_pathways_annotation.fasta"
+  "custom_fasta/Protein_sequences_for_phytohormone_pathways_annotation.fasta"
 phyhorm_suppl_tab: # table providing manually curated pathway structures 
   "databases/FunLuca_phytohormones.xlsx"
 
 ##! blast-vibrioferrin
 vibrioferrin_db:
-  ann_dbs_path+"/custom_fasta/Protein_sequences_for_vibrioferrin_pathways_annotation_01mai20.fasta"
+  "custom_fasta/Protein_sequences_for_vibrioferrin_pathways_annotation_01mai20.fasta"
 
 ##! blast-DMSP
 DMSP_db:
-  ann_dbs_path+"/custom_fasta/Protein_sequences_for_DMSP_pathways_annotation_21dec20.fasta"
+  "custom_fasta/Protein_sequences_for_DMSP_pathways_annotation_21dec20.fasta"
 
 ##! dbCAN
 dbCAN_db:
-  ann_dbs_path+"/CAZy"
+  "CAZy"
 CAZy_subs:
   "databases/selected_CAZy.tsv"
 
